<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StreamVision IPTV</string>
    <string name="channels">Channels</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search_channels">Search channels...</string>
    <string name="no_channels">No channels found</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="enter_playlist_url">Enter playlist URL</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="error_loading_playlist">Error loading playlist</string>
    <string name="playlist_loaded">Playlist loaded successfully</string>
    <string name="no_url_provided">Please enter a URL</string>
    <string name="all_channels">All Channels</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="manage_playlists">Manage Playlists</string>
    <string name="no_playlists">No playlists added</string>
    <string name="loading">Loading...</string>
    <string name="error_playback">Error playing channel</string>
    <string name="buffering">Buffering...</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="recent">Recent</string>
    <string name="clear_history">Clear History</string>
    <string name="about">About</string>
    <string name="version">Version</string>

    <!-- Added: required by AddPlaylistDialog -->
    <string name="error_name_required">Name is required</string>
    <string name="error_url_required">URL is required</string>
    <string name="browse_file">Browse local file…</string>
    <string name="recently_watched">RECENTLY WATCHED</string>
    <string name="search_favorites">Search favorites…</string>
    <string name="refresh">Refresh</string>
</resources>
